--- a/todo/templates/todo/add_item.html
+++ b/todo/templates/todo/add_item.html
@@ -10,16 +10,17 @@
 <body>
     <h1>Add a Todo Item</h1>
     <form method="POST" action="add">
+       {% csrf_token %} 
         <div>
             <p>
-                <label for="id_name">Name:</label>
+                <label for="id_name">Name: </label>
                 <input type="text" id="id_name" name="item_name" />
             </p>
         </div>
         <div>
             <p>
-                <label for="id_done">Done:</label>
-                <input type="checkbox" id="id_done" name="item_done" />
+                <label form="id_done">Done: </label>
+                <input type="checkbox" id="id_done" name="done" />
             </p>
         </div>
         <div>
