--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -11,15 +11,23 @@
     <h1>Things I need to do</h1>
     <table>
         {% for item in items %}
-            <tr>
+        <tr>
             {% if item.done %}
             <td><del>{{ item.name }}</del></td>
             {% else %}
             <td>{{ item.name }}</td>
-            {% endif %}  
-            </tr>
-            {% empty %}
-            <tr><td>You have nothing to do</td></tr>
+            {% endif %}
+            <td>
+                |<a href="/edit/{{ item.id }}">
+                    <button>Edit</button>
+                </a>
+            </td>
+
+        </tr>
+        {% empty %}
+        <tr>
+            <td>You have nothing to do</td>
+        </tr>
         {% endfor %}
     </table>
     <a href="/add">Add an Item</a>
