--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -11,11 +11,11 @@
     <h1>Things I need to do</h1>
     <table>
         {% for item in items %}
-        <tr>
+            <tr>
             {% if item.done %}
-            <td><del>{{ item.name }}</del></td>
+                <td><del>{{ item.name }}</del></td>
             {% else %}
-            <td>{{ item.name }}</td>
+                <td>{{ item.name }}</td>
             {% endif %}
              <td>
                 |<a href="/toggle/{{ item.id }}">
@@ -32,14 +32,11 @@
                     <button>delete</button>
                 </a>
             </td>
-        </tr>
+            </tr>
         {% empty %}
-        <tr>
-            <td>You have nothing to do</td>
-        </tr>
+        <tr><td>You have nothing to do</td></tr>
         {% endfor %}
     </table>
     <a href="/add">Add an Item</a>
 </body>
-
 </html>
